# mbo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_SUCCESS.md  README.md  STATUS.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.observability.yaml  docker-compose.prod.yaml  docker-compose.yaml  flake.nix  stress-test.sh
.github/workflows/: build-backend.yml  build-frontend.yml  build.yml  test.yml
mbo-backend/: .dockerignore  Cargo.toml  Dockerfile
mbo-backend/assets/: .gitignore
mbo-backend/src/: main.rs
mbo-backend/src/api/: mod.rs
mbo-backend/src/api/market/export/: mod.rs
mbo-backend/src/api/mbo/stream/json/: mod.rs
mbo-backend/src/datatypes/: book.rs  market.rs  mod.rs
mbo-backend/src/metrics/: mod.rs
mbo-backend/src/storage/: mod.rs
mbo-frontend/: .dockerignore  Dockerfile  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
mbo-frontend/src/lib/: types.ts
mbo-frontend/src/lib/components/: BestBidCard.svelte  BestOfferCard.svelte  ErrorBanner.svelte  HeaderCard.svelte  LoadingState.svelte  MarketStatsCard.svelte
mbo-frontend/src/lib/services/: streamClient.ts
mbo-frontend/src/lib/stores/: marketPlayer.ts
mbo-frontend/src/routes/: +layout.svelte  +page.svelte
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mbo-metrics.json
monitoring/grafana/provisioning/dashboards/: mbo.yml
nginx/: nginx.conf
src/: main.rs
src/api/: market_export.rs  mbo_stream.rs  mod.rs
src/api/market/export/: mod.rs
src/datatypes/: book.rs  market.rs  price_level.rs
(+5 files in other folders)
