[package]
name = "mbo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
databento = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
axum = { version = "0.8" }
futures = "0.3"