[package]
name = "mbo"
version = "0.1.0"
edition = "2021"

[dependencies]
# General project dependencies
anyhow = "1.0"
databento = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# TCP streaming and webserver
axum = { version = "0.8" }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# OpenAPI documentation
utoipa = { version = "5" }

# Metrics
prometheus = "0.13"
tokio-util = "0.7.17"
tokio-stream = "0.1.17"
bytes = "1.11.0"
async_zip = { version = "0.0.16", features = ["tokio"] }
http-body-util = "0.1"
zip = "6.0.0"
